--- a/index.html
+++ b/index.html
@@ -153,6 +153,65 @@
         </h4>
     </div>
     <div>
+        <h1>CONDITIONAL</h1>
+        <h2>merupakan statement percabangan yang menggambarkan suatu kondisi.</h2>
+        <h3>Yang dicek adalah apakah kondisi tersebut TRUE (benar).
+
+            Jika TRUE maka code didalam kondisi tersebut dijalankan.
+            </h3>
+    </div>
+    <div>
+        <h1>perkondisian yang terdapat dalam CONDITIONAL</h1>
+        <h2>
+            <ul>
+                <li>if = untuk menujukkan suatu kondisi</li>
+                <li>if else = untuk menunjukkan kondisi lain</li>
+                <li>else = untuk menunjukkan jika suatu kndisi salah</li>
+            </ul>
+            <a href=""><img src="download.png"></a>
+        </h2>
+    </div>
+    <div>
+        <h1>LOOPING
+        </h1>
+        <h2>Looping adalah statement yang mengulang sebuah instruksi hingga kondisi terpenuhi atau jika kondisi stop/berhenti tercapai.
+        </h2>
+    </div>
+    <div>
+        <h1>FOR LOOP</h1>
+        <h2>FOR LOOP merupakan instruksi pengulangan yang dapat kita berikan pada program yang kita kembangkan.</h2>
+        <h3>Jika kita ingin menampilkan angka 1 - 100 kita menggunakan FOR LOOP.
+<br>
+            Karena kita sudah tahu bahwa pengulangan akan dilakukan sebanyak 100kali
+            </h3>
+    </div>
+    <div>
+        <h1>WHILE LOOP</h1>
+        <h2>WHILE LOOP akan menjalankan instruksi pengulangan kondisi bernilai TRUE.
+        </h2>
+        <h3>Jika kita ingin menampilkan list user yang sudah melakukan registrasi.
+<br>
+            Kita tidak mungkin tahu nilai pasti berapa banyak pengulangan data yang akan tampil.
+       <br>     
+            Maka gunakan WHILE.
+            </h3>
+    </div>
+    <div>
+        <h1>DO WHILE</h1>
+        <h2>menjalankan pengulangan 1 kali sebelum dilakukan pengecekan kondisi</h2>
+        
+    </div>
+    <div>
+        <h1>Nested Loop</h1>
+        <h2>Jika kita membuat looping didalam looping. Maka ini dinamakan Nested Loop.
+
+            Looping pertama dianalogikan sebagai baris.
+            
+            Looping kedua dianalogikan sebagai kolom
+            </h2>
+
+    </div>
+    <div>
         <p>Scope dan Function</p>
         <h1>Scope</h1>
         <h2>Scope adalah konsep dalam flow data variabel. 
